versioned_docs/version-3.5/api-libf3d/structf3d_1_1options_1_1render_1_1effect.md
# Structure f3d::options::render::effect {/* #structf3d_1_1options_1_1render_1_1effect */}

![][C++]
![][public]

**Definition**: `options.h` (line 298)





## Inner classes

* [f3d::options::render::effect::antialiasing](structf3d_1_1options_1_1render_1_1effect_1_1antialiasing.md)
* [f3d::options::render::effect::blending](structf3d_1_1options_1_1render_1_1effect_1_1blending.md)

## Members

* [ambient\_occlusion](structf3d_1_1options_1_1render_1_1effect.md#structf3d_1_1options_1_1render_1_1effect_1a1b7f2866937fbd9fe07997aec7162709)
* [anti\_aliasing](structf3d_1_1options_1_1render_1_1effect.md#structf3d_1_1options_1_1render_1_1effect_1a062714bd4ce6da94b4492fa778d4f419)
* [antialiasing](structf3d_1_1options_1_1render_1_1effect.md#structf3d_1_1options_1_1render_1_1effect_1ac339a4122e38c01b2692d69b86a7aef6)
* [blending](structf3d_1_1options_1_1render_1_1effect.md#structf3d_1_1options_1_1render_1_1effect_1a7de12b54afc1b9a2a879bc3440571d57)
* [display\_depth](structf3d_1_1options_1_1render_1_1effect.md#structf3d_1_1options_1_1render_1_1effect_1afdd6a813b43732241ae40c5ab0ac1c26)
* [final\_shader](structf3d_1_1options_1_1render_1_1effect.md#structf3d_1_1options_1_1render_1_1effect_1a4ab6e1b40873de56044a8b94fad39aa1)
* [tone\_mapping](structf3d_1_1options_1_1render_1_1effect.md#structf3d_1_1options_1_1render_1_1effect_1ae94762121c57b1829521701daf0de245)
* [translucency\_support](structf3d_1_1options_1_1render_1_1effect.md#structf3d_1_1options_1_1render_1_1effect_1a638f07c2ed641c9a6b381c624b98de64)

## Public attributes

### Variable ambient\_occlusion {/* #structf3d_1_1options_1_1render_1_1effect_1a1b7f2866937fbd9fe07997aec7162709 */}

![][public]

**Definition**: `options.h` (line 299)


```cpp
bool f3d::options::render::effect::ambient_occlusion = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::render::effect::ambient_occlusion"}]}`
*/}

### Variable anti\_aliasing {/* #structf3d_1_1options_1_1render_1_1effect_1a062714bd4ce6da94b4492fa778d4f419 */}

![][public]

**Definition**: `options.h` (line 300)


```cpp
bool f3d::options::render::effect::anti_aliasing = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::render::effect::anti_aliasing"}]}`
*/}

### Variable antialiasing {/* #structf3d_1_1options_1_1render_1_1effect_1ac339a4122e38c01b2692d69b86a7aef6 */}

![][public]

**Definition**: `options.h` (line 304)


```cpp
struct f3d::options::render::effect::antialiasing f3d::options::render::effect::antialiasing
```








**Type**: struct f3d::options::render::effect::antialiasing

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::render::effect::antialiasing"}]}`
*/}

### Variable blending {/* #structf3d_1_1options_1_1render_1_1effect_1a7de12b54afc1b9a2a879bc3440571d57 */}

![][public]

**Definition**: `options.h` (line 309)


```cpp
struct f3d::options::render::effect::blending f3d::options::render::effect::blending
```








**Type**: struct f3d::options::render::effect::blending

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::render::effect::blending"}]}`
*/}

### Variable display\_depth {/* #structf3d_1_1options_1_1render_1_1effect_1afdd6a813b43732241ae40c5ab0ac1c26 */}

![][public]

**Definition**: `options.h` (line 311)


```cpp
bool f3d::options::render::effect::display_depth = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::render::effect::display_depth"}]}`
*/}

### Variable final\_shader {/* #structf3d_1_1options_1_1render_1_1effect_1a4ab6e1b40873de56044a8b94fad39aa1 */}

![][public]

**Definition**: `options.h` (line 312)


```cpp
std::optional<std::string> f3d::options::render::effect::final_shader
```








**Type**: std::optional< std::string >

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::render::effect::final_shader"}]}`
*/}

### Variable tone\_mapping {/* #structf3d_1_1options_1_1render_1_1effect_1ae94762121c57b1829521701daf0de245 */}

![][public]

**Definition**: `options.h` (line 313)


```cpp
bool f3d::options::render::effect::tone_mapping = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::render::effect::tone_mapping"}]}`
*/}

### Variable translucency\_support {/* #structf3d_1_1options_1_1render_1_1effect_1a638f07c2ed641c9a6b381c624b98de64 */}

![][public]

**Definition**: `options.h` (line 314)


```cpp
bool f3d::options::render::effect::translucency_support = false
```








**Type**: bool

{/*
**TODO**:

* `qualifiedname {"type":"element","name":"qualifiedname","attributes":{},"children":[{"type":"text","text":"f3d::options::render::effect::translucency_support"}]}`
*/}

[public]: https://img.shields.io/badge/-public-brightgreen (public)
[C++]: https://img.shields.io/badge/language-C%2B%2B-blue (C++)
[const]: https://img.shields.io/badge/-const-lightblue (const)
[protected]: https://img.shields.io/badge/-protected-yellow (protected)
[static]: https://img.shields.io/badge/-static-lightgrey (static)